dhall/tests/type-errors/unit/IfBranchesNotMatch.txt
Type error: error: IfBranchMismatch
 --> <current file>:1:0
  |
1 | if True then 1 else ""
  | ^^^^^^^^^^^^^^^^^^^^^^ IfBranchMismatch
  |
